iterator aplicado