@@ -1,16 +1,21 @@
 package com.ppaidsi.services;
 
+import com.ppaidsi.iterators.IAgregado;
+import com.ppaidsi.iterators.IteradorEventoSismico;
+import com.ppaidsi.iterators.iIterador;
 import com.ppaidsi.models.Estado;
 import com.ppaidsi.models.EventoSismico;
 import com.ppaidsi.models.Sesion;
 import com.ppaidsi.models.Usuario;
 
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-public class GestorSismos {
+public class GestorSismos implements IAgregado {
+
+    private static final String ESTADO_PENDIENTE_REVISION = "pendienteRevision";
 
     private final List<EventoSismico> eventos;
     private final List<Sesion> sesiones;
@@ -22,18 +27,27 @@ public class GestorSismos {
         this.estadoBloqueado = estadoBloqueado;
     }
 
+    @Override
+    public iIterador crearIterador(Object[] elementos, Object[] filtro) {
+        return new IteradorEventoSismico(elementos, filtro);
+    }
+
     public List<EventoSismico> buscarSismosParaRevision() {
-        return eventos.stream()
-                .filter(evento -> evento.obtenerEstadoActual()
-                        .map(estado -> "pendienteRevision".equalsIgnoreCase(estado.getNombreEstado()))
-                        .orElse(false))
-                .collect(Collectors.toList());
+        var iterador = crearIterador(eventos.toArray(), new Object[]{ESTADO_PENDIENTE_REVISION});
+        var resultado = new ArrayList<EventoSismico>();
+        for (iterador.primero(); !iterador.haFinalizado(); iterador.siguiente()) {
+            Object actual = iterador.elementoActual();
+            if (actual instanceof EventoSismico evento) {
+                resultado.add(evento);
+            }
+        }
+        return resultado;
     }
 
     public List<EventoSismico> ordenarEventosPorFecha(List<EventoSismico> eventos) {
         return eventos.stream()
                 .sorted(Comparator.comparing(EventoSismico::getFechaHoraOcurrencia))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void bloquearEventoSismico(EventoSismico evento) {
